# aurora

./: .gitignore  AGENTS.md  CHANGELOG  README.md  TODO.md  clean.sh  config.example.yaml  install.sh  pip  pip_check.py  pip_freeze.py  pip_lock.py  pyproject.toml  requirements.freeze.txt  requirements.lock.txt  requirements.txt  run_server.py  start.sh
aurora/: __init__.py  config.py
aurora/agent/: __init__.py  learner.py  loop.py
aurora/api/: app.py  auth.py
aurora/api/routes/: chat.py  compat.py
aurora/memory/: __init__.py  store.py
aurora/prompts/: solutions.md  system.md
aurora/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
aurora/tools/: __init__.py  _http_guards.py  _ssh_common.py  base.py  datetime_tool.py  file_edit_tool.py  file_tool.py  registry.py  rss_tool.py  sandbox.py  scp_upload_tool.py  server_probe.py  ssh_tool.py  weather_tool.py  websearch_tool.py
cli/: main.py
reviews/: ChatGPT.md  Claude_Opus_4.7_Max_Effort.md  Grok_4.20_Expert.md  Kimi_K2.5_Agent.md  Qwen3.6-Plus.md
reviews/0.8.0/: ChatGPT.md
reviews/0.9.0/: ChatGPT.md  GLM-5.1.md  Grok.md  Qwen3.6_Plus.md  __reviews_verification.md
reviews/0.9.1/: Claude_Opus_4.7.md
web/: index.html
web/css/: style.css
web/js/: app.js
